# compizconfig-backend-kconfig4

./: CMakeLists.txt
src/: CMakeLists.txt  kconfig_backend.cpp
